--- a/templates/base.html
+++ b/templates/base.html
@@ -74,8 +74,22 @@
       </div>
     </div><!-- End Breadcrumbs -->
  {% endif %}
-{% block content %}
+ <div class="text-center">
+  {% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+        <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    {{ message }}
+  </div>
+    {% endfor %}
+  </ul>
+{% endif %}
+ </div>
 
+{% block content %}
 
 {% endblock %}
 
