Notes, all edit + delete, cleaned

--- a/templates/note/editnote.html
+++ b/templates/note/editnote.html
@@ -3,9 +3,8 @@
 {% load crispy_forms_tags %}
 {% load i18n %}
 
-{% block title %}{% trans "Edit spending" %}{% endblock %}
-{% block header %}{{ spending.name }}{% endblock %}
-{% block paragraph %}{% trans "Edit spending" %}{% endblock %}
+{% block title %}{% trans "Edit note" %}{% endblock %}
+{% block header %}{% trans "Edit spending" %}{% endblock %}
 
 {% block content %}
     <section id="contact" class="contact">
@@ -14,7 +13,8 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                 <input type="submit" value="{% trans "Save" %}" class="btn btn-success">
-                <a class="btn btn-link" href="{% url 'tripus:spending' trip_id %}" role="button">{% trans "Back to spending" %}</a>
+                <a class="btn btn-link" href="{% url 'tripus:singleTrip' trip_id %}" role="button">{% trans "Back to trip" %}</a>
+                <a class="btn btn-link" href="{% url 'tripus:noteDelete' trip_id note.id %}" role="button">{% trans "Delete note" %}</a>
             </form>
         </div>
     </section>
