--- a/templates/trip/singletrip.html
+++ b/templates/trip/singletrip.html
@@ -9,33 +9,43 @@
 
 {% block content %}
     <div class="container col-sm-6" data-aos="fade-up">
-    <h1>{% trans "Weather" %}</h1><hr>
+        <h1>{% trans "Weather" %}</h1><hr>
         {{ object.country }}
-    {% if country_currency != 'PLN' %}
-    <h1>{% trans "Currency rate" %}</h1><hr>
+        {% if country_currency != 'PLN' %}
+        <h1>{% trans "Currency rate" %}</h1><hr>
         <div class="col-sm-4 text-center">
-        {{ topln }}<hr>
-        {{ frompln }}
+            <table class="table">
+                <tbody>
+                <tr>
+                    <td>{{ country_currency }}{{ '/PLN' }}</td>
+                    <td>{{ topln}}</td>
+                </tr>
+                <tr>
+                    <td>{{ 'PLN/' }}{{ country_currency }}</td>
+                    <td>{{ frompln }}</td>
+                </tr>
+                </tbody>
+            </table>
         </div>
-    {% endif %}
-    <h1>{% trans "Tickets reservations" %}</h1><hr>
-    <h1>{% trans "Sightseeing list" %}</h1><hr>
+        {% endif %}
+        <h1>{% trans "Tickets reservations" %}</h1><hr>
+        <h1>{% trans "Sightseeing list" %}</h1><hr>
         <section id="contact" class="contact">
             <div class="container" data-aos="fade-up">
-                {% include "trip/visit_template.html" %}
+                {% include "trip/../place/visit_template.html" %}
                 {% if places_list|length > 5 %}
                 <div class="text-center">
                     <a href="{% url 'tripus:visitPlaceList' my_trip.id %}">{% trans "More places to visit" %}</a>
                 </div>
                 {% endif %}
-            <a class="btn btn-success float-left" href="{% url 'tripus:visitPlaceAdd' my_trip.id %}" role="button">{% trans "Add place" %}</a>
+                <a class="btn btn-success float-left" href="{% url 'tripus:visitPlaceAdd' my_trip.id %}" role="button">{% trans "Add place" %}</a>
             </div>
         </section>
-    <h1>{% trans "To pack list" %}</h1><hr>
-    <h1>{% trans "Spending" %}</h1><hr>
+        <h1>{% trans "To pack list" %}</h1><hr>
+        <h1>{% trans "Spending" %}</h1><hr>
         <section id="contact" class="contact">
             <div class="container" data-aos="fade-up">
-                {% include "trip/spending_template.html" %}
+                {% include "trip/../spending/spending_template.html" %}
             </div>
             {% if spending_record|length > 0 %}
             <div class="text-center">
@@ -43,6 +53,20 @@
             </div>
         {% endif %}
         </section>
-
+        <h1>{% trans "Notes" %}</h1><hr>
+        <section id="contact" class="contact">
+            <div class="container" data-aos="fade-up">
+                {% if note_exists == 0 %}
+                    <form method="post">
+                    {% csrf_token %}
+                    {{ form_notes|crispy }}
+                    <input type="submit" value="{% trans "Add" %}" class="btn btn-success">
+                    </form>
+                {% else %}
+                    {{ form_notes.text|linebreaks }}
+                    <a class=" btn btn-success" href="{% url 'tripus:noteEdit' my_trip.id form_notes.id %}">{% trans "Edit note" %}</a>
+                {% endif %}
+            </div>
+        </section>
     </div>
 {% endblock %}
