--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 {% load i18n %}
 
@@ -7,12 +8,12 @@
 
 {% block content %}
     <section id="contact" class="contact">
-    <div class="container" data-aos="fade-up">
-          <form method="post" class="col-sm-3 offset-sm-4 text-center">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button type="submit" class="btn btn-success">{% trans "Log in" %}</button>
-          </form>
-    </div>
+        <div class="container" data-aos="fade-up">
+              <form method="post" class="col-sm-3 offset-sm-4 text-center">
+                  {% csrf_token %}
+                  {{ form|crispy }}
+                  <button type="submit" class="btn btn-success">{% trans "Log in" %}</button>
+              </form>
+        </div>
     </section>
 {% endblock %}
