--- a/templates/trip/edittrip.html
+++ b/templates/trip/edittrip.html
@@ -8,8 +8,12 @@
 
 {% block content %}
     <section id="contact" class="contact">
-    <div class="container" data-aos="fade-up">
-
-    </div>
+        <div class="container col-sm-4" data-aos="fade-up">
+            <form method="post">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input type="submit" value="{% trans "Save trip" %}" class="btn btn-success">
+            </form>
+        </div>
     </section>
 {% endblock %}
